Add a script for the kaptain meta package to install.

--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -3,3 +3,4 @@ FROM scratch
 COPY kaptain-user-scripts-${Version}.zip /
 COPY kaptain-user-scripts-cli-${Version}.zip /
 COPY kaptain-user-scripts-encryption-${Version}.zip /
+COPY kaptain-user-scripts-42-${Version}.zip /
