--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,4 +17,4 @@ jobs:
       qc-block-slash-containing-branches: true
       qc-block-conventional-commits: true
       hook-pre-docker-prepare-script-sub-path: bin/package-for-release.bash
-      github-release-verbatim-files: target/user-scripts/all/kaptain-user-scripts.zip target/user-scripts/cli/kaptain-user-scripts-cli.zip target/user-scripts/encryption/kaptain-user-scripts-encryption.zip
+      github-release-verbatim-files: target/user-scripts/all/kaptain-user-scripts.zip target/user-scripts/cli/kaptain-user-scripts-cli.zip target/user-scripts/encryption/kaptain-user-scripts-encryption.zip target/user-scripts/42/kaptain-user-scripts-42.zip
