Add testing to the project - exec bits on the scripts and bash 3.2 compatibility for Macs which still come with 3.2 and try to push you into zsh...

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,5 +16,6 @@ jobs:
     with:
       qc-block-slash-containing-branches: true
       qc-block-conventional-commits: true
+      hook-pre-tagging-tests-script-sub-path: bin/run-tests.bash
       hook-pre-docker-prepare-script-sub-path: bin/package-for-release.bash
       github-release-verbatim-files: target/user-scripts/all/kaptain-user-scripts.zip target/user-scripts/cli/kaptain-user-scripts-cli.zip target/user-scripts/encryption/kaptain-user-scripts-encryption.zip target/user-scripts/42/kaptain-user-scripts-42.zip
